--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         // Impostazioni API
         const apiUrlBase = "https://generativelanguage.googleapis.com/v1beta/models/";
         const modelName = "gemini-2.5-flash-preview-09-2025";
-        const apiKey = ""; // Lasciare vuoto
+        const apiKey = "AIzaSyAzYH13cNVA74Hbp1I2cagCncCusyk_tn4"; // Lasciare vuoto
 
         // Inizializzazione Firebase
         let app, db, auth;
