--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         // Impostazioni API Gemini (apiKey è intenzionalmente vuota per essere iniettata in runtime)
         const apiUrlBase = "https://generativelanguage.googleapis.com/v1beta/models/";
         const modelName = "gemini-2.5-flash-preview-09-2025";
-        const apiKey = ""; 
+        const apiKey = "AIzaSyAzYH13cNVA74Hbp1I2cagCncCusyk_tn4"; 
 
         // Inizializzazione Firebase
         let app, db, auth;
