--- a/index.html
+++ b/index.html
@@ -691,9 +691,9 @@
             
             // Definisce le classi e le sezioni come richiesto
             const classesConfig = [
-                { year: 'Seconda', sections: [{ section: 'I', spec: 'Scientifico' }, { section: 'L', spec: 'Scientifico' }, { section: 'A', spec: 'Moda' }, { section: 'B', spec: 'Moda' }] },
-                { year: 'Terza', sections: [{ section: 'I', spec: 'Scientifico' }, { section: 'L', spec: 'Scientifico' }, { section: 'A', spec: 'Moda' }, { section: 'B', spec: 'Moda' }] },
-                { year: 'Quinta', sections: [{ section: 'I', spec: 'Scientifico' }, { section: 'L', spec: 'Scientifico' }, { section: 'A', spec: 'Moda' }, { section: 'B', spec: 'Moda' }] },
+                { year: 'Seconda', sections: [{ section: 'I', spec: 'Scientifico' }, { section: 'L', spec: 'Scientifico' }] },
+                { year: 'Terza', sections: [{ section: 'I', spec: 'Scientifico' }, { section: 'L', spec: 'Scientifico' }] },
+                { year: 'Quinta', sections: [{ section: 'I', spec: 'Scientifico' }, { section: 'L', spec: 'Scientifico' }] },
                 { year: 'Prima', sections: [{ section: 'A', spec: 'Moda' }, { section: 'B', spec: 'Moda' }] },
             ];
 
