--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
             contentDiv.innerHTML = `
                 <div id="printable-content" class="exam-area max-w-4xl mx-auto bg-white p-8 rounded-xl shadow-2xl border border-primary/20">
                     <header class="mb-8 border-b pb-4">
-                        <h2 class="text-3xl font-extrabold text-primary">Verifica di Informatica Avanzata</h2>
+                        <h2 class="text-3xl font-extrabold text-primary">Verifica di Informatica</h2>
                     </header>
 
                     <!-- Dettagli Studente -->
@@ -1148,7 +1148,7 @@
                 </head>
                 <body>
                     <div class="header">
-                        <h1>Verifica di Informatica Avanzata</h1>
+                        <h1>Verifica di Informatica</h1>
                         <h2>${examData.topic}</h2>
                     </div>
 
